# MIPT_DL_CAPTCHA

./: README.md  pyproject.toml  submission.csv  test.ipynb
